--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,7 @@ textarea {
 html {
   background-color: #fff;
   height: 100%;
+  width: 100%;
 }
 
 body {
@@ -106,6 +107,7 @@ body {
   padding: 2em;
   font-size: 1.25em;
   height: 100%;
+  background-color: #ff91af;
 }
 
 .wrapper {
@@ -118,9 +120,14 @@ body {
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
-  line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
+  border-style: dashed;
+  border-color: #f16059;
+  border-top: 0px;
+  border-bottom: 0px;
+  padding: 1em;
+  line-height: 1.3em;
+  font-size: 1.3em;
+  background-color: #ff91af;
   height: 300px;
   display: flex;
   width: 30%;
