--- a/css/main.css
+++ b/css/main.css
@@ -115,27 +115,30 @@ body {
   font-weight: 700;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
-  border-style: dashed;
-  border-color: #f16059;
-  border-top: 0px;
-  border-bottom: 0px;
-  padding: 1em;
   line-height: 1.3em;
   font-size: 1.3em;
   background-color: #ff91af;
   height: 300px;
   display: flex;
-  width: 30%;
+  /*width: 30%;*/
   justify-content: center;
   align-items: center;
+  padding: 1em;
 }
 
+.div-1, .div-2 {
+  border: medium dashed #f16059;
+  border-top: 0px;
+  border-bottom: 0px;
+  border-left: 0px;
 
+}
 
 
 /* ==========================================================================
